modified:   index.html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><img src="./images/logo.svg" alt="logo" /></a>
+        <a href="./index.html"
+          ><img src="./images/logo.svg" alt="logotype"
+        /></a>
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#services-and-prices">Services and prices</a></li>
           <li><a href="#barbers">Barbers</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="#contacts">Contacts</a></li>
         </ul>
       </nav>
       <a href="tel:+380441111111">+38 044 111 11 11</a>
@@ -226,7 +228,7 @@
           <button type="button">Send</button>
         </article>
         <article>
-          <h2>Contacts</h2>
+          <h2 id="contacts">Contacts</h2>
           <address>
             <ul>
               <li>st. Vasilkivska, 7A Kyiv, 08132</li>
